--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.98"
 axum = "0.8.3"
+base64 = "0.22.1"
 bitcoin = "0.32.5"
+minreq = "2.13.4"
 rand = "0.9.1"
 secp256k1 = "0.31.0"
 serde = { version = "1.0.219", features = ["derive"] }
